fix: svg - a tag link remove, change relative image size

--- a/layouts/shortcodes/svg.html
+++ b/layouts/shortcodes/svg.html
@@ -5,10 +5,10 @@
 {{- $svgFile := path.Join (path.Dir .Position.Filename) $src }}
 
 <figure class="xImage">
-  <a href="{{ $src }}" target="_blank">
-    {{ readFile $svgFile | safeHTML }}
-  </a>
-  {{- with $title }}
-  <figcaption>図: {{ . }}</figcaption>
-  {{- end }}
+  <div class="svg-wrapper">
+      {{ readFile $svgFile | safeHTML }}
+    {{- with $title }}
+    <figcaption>図: {{ . }}</figcaption>
+    {{- end }}
+  </div>
 </figure>
